# dspace-python-client

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/html/doctrees/: environment.pickle  index.doctree  readme.doctree
docs/html/doctrees/source/: dspace.doctree  modules.doctree
docs/html/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/html/html/_sources/: index.rst.txt  readme.rst.txt
docs/html/html/_sources/source/: dspace.rst.txt  modules.rst.txt
docs/html/html/source/: dspace.html  modules.html
docs/source/: dspace.rst
dspace/: __init__.py  bitstream.py  client.py  errors.py  item.py  utils.py
tests/: conftest.py  test_bitstream.py  test_client.py  test_item.py  test_utils.py
tests/fixtures/: test-file-02.txt
tests/vcr_cassettes/bitstream/: delete_bitstream.yaml  delete_nonexistent_bitstream.yaml  post_bitstream_success_remote_file.yaml  post_bitstream_with_handle.yaml  post_bitstream_with_uuid.yaml  post_to_nonexistent_item.yaml
tests/vcr_cassettes/client/: get_object_by_handle.yaml  get_object_by_handle_doesnt_exist.yaml  login.yaml  login_error.yaml  status.yaml
tests/vcr_cassettes/item/: delete_item.yaml  delete_nonexistent_item.yaml  post.yaml  post_item_with_handle.yaml  post_item_with_uuid.yaml  post_to_nonexistent_collection.yaml
vcr_cassettes/client/: get_object_by_handle.yaml
