[tool.poetry]
name = "dspace-python-client"
version = "0.1.0"
description = "Python Client library for working with the DSpace API"
authors = ["Helen Bailey <hbailey@mit.edu>", "Eric Hanson <ehanson@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
